[package]
authors = ["Joe Wilm <joe@jwilm.com>", "Christian Duerr <contact@christianduerr.com>"]
description = "Parser for implementing terminal emulators"
repository = "https://github.com/alacritty/vte"
documentation = "https://docs.rs/vte/"
keywords = ["ansi", "vte", "parser", "terminal"]
categories = ["parsing", "no-std"]
exclude = ["/.travis.yml"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
version = "0.10.1"
name = "vte"
edition = "2018"

[dependencies]
vte_generate_state_changes = { version = "0.1.0", path = "vte_generate_state_changes" }
arrayvec = { version = "0.5.1", default-features = false, optional = true }
log = { version = "0.4", optional = true }
utf8parse = { version = "0.2.0", path = "utf8parse" }

[features]
ansi = ["log"]
default = ["no_std", "no_alloc"]
no_alloc = ["arrayvec", "no_std"]
no_std = []
nightly = ["utf8parse/nightly"]

[workspace]
members = ["utf8parse", "vte_generate_state_changes"]
