[package]
name = "utf8parse"
version = "0.1.1"
authors = ["Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0 OR MIT"
description = "Table-driven UTF-8 parser"
keywords = ["utf8", "parse", "table"]
repository = "https://github.com/jwilm/vte"
documentation = "https://docs.rs/utf8parse/"

[dependencies]
